Added index.html files to do file listings.

--- a/stylesheets/index.html
+++ b/stylesheets/index.html
@@ -17,9 +17,7 @@
   <h2>optimi software</h2>
   <p>From this page you can download different historic versions of the <b>optimi</b> software. You can also find the main <b>optimi</b> software page <a href="/optimi/">here</a> and you can find the code on GitHub <a href="https://github.com/lawrennd/optimi/">here</a>.</p>
     <p>Download the optimi software using the links below.</p>
-      <a href="./.git/">./.git/</a><br>
-      <a href="./javascripts/">./javascripts/</a><br>
-      <a href="./stylesheets/">./stylesheets/</a><br>
-      <a href="./params.json">./params.json</a><br>
+      <a href="./github-light.css">./github-light.css</a><br>
+      <a href="./styles.css">./styles.css</a><br>
   </body>
 </html>
